--- a/app/src/main/res/layout/content_activity_noise.xml
+++ b/app/src/main/res/layout/content_activity_noise.xml
@@ -1,74 +1,103 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+<?xml version="1.0" encoding="UTF-8"?>
+
+<RelativeLayout
+    tools:showIn="@layout/activity_measure_noise"
     tools:context=".MeasureNoise"
-    tools:showIn="@layout/activity_measure_noise">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!--<android.support.design.widget.FloatingActionButtonandroid:id="@+id/refresh"android:layout_width="wrap_content"android:layout_height="wrap_content"android:layout_gravity="end|bottom"android:layout_margin="16dp"/> -->
+
 
     <TextView
-        android:id="@+id/textView"
+        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="MeasureNoise"
-        app:layout_constraintBottom_toTopOf="@+id/guideline6"
-        app:layout_constraintEnd_toStartOf="@+id/guideline9"
-        app:layout_constraintStart_toStartOf="@+id/guideline8" />
+        android:paddingBottom="10dp"
+        android:layout_above="@id/max_noise_label"
+        android:layout_toLeftOf="@+id/current"
+        android:text="Current Noise reading: "
+        android:id="@+id/current_noise_label"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_above="@id/max"
+        android:id="@+id/current"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:paddingBottom="8dp"
+        android:layout_above="@id/min_noise_label"
+        android:layout_toLeftOf="@+id/max"
+        android:text="Maximum Noise reading: "
+        android:id="@+id/max_noise_label"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_above="@id/min"
+        android:id="@+id/max"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:paddingBottom="10dp"
+        android:layout_above="@id/avg_noise_label"
+        android:layout_toLeftOf="@+id/min"
+        android:text="Minimum Noise reading: "
+        android:id="@+id/min_noise_label"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_above="@id/avg"
+        android:id="@+id/min"
+        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:paddingBottom="10dp"
+        android:layout_above="@id/button3"
+        android:layout_toLeftOf="@+id/avg"
+        android:text="Average Noise reading: "
+        android:id="@+id/avg_noise_label"/>
+
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_above="@id/button3"
+        android:id="@+id/avg"
+        android:layout_marginTop="8dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="10dp"/>
 
     <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Record"
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:text="Start"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        android:layout_centerInParent="true"/>
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="8dp"
-        android:text="Stop"
-        app:layout_constraintStart_toStartOf="@+id/guideline7"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+    <com.jjoe64.graphview.GraphView
+        android:layout_height="200dip"
+        android:layout_width="match_parent"
+        android:id="@+id/graph"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@id/button3"
+        tools:layout_editor_absoluteX="0dp"
+        android:layout_alignParentBottom="true"/>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="213dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="205dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="145dp" />
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="265dp" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
